--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node.extend": "^2.0.0",
     "nuxt": "^1.0.0-rc11",
     "underscore": "^1.8.3",
+    "uploadcare-widget": "^3.1.3",
     "vue-i18n": "^7.0.5",
     "vue-loading-spinner": "^1.0.10",
     "vue-smooth-scroll": "^1.0.13",
