--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "gsap": "^1.20.2",
     "i18next": "^8.4.3",
     "jquery": "^3.2.1",
+    "js-beautify": "1.6.14",
     "lodash": "^4.17.4",
     "node.extend": "^2.0.0",
     "nuxt": "^1.0.0-rc11",
     "underscore": "^1.8.3",
     "uploadcare-widget": "^3.1.3",
-    "vue-i18n": "^7.0.5",
+    "vue-i18n": "^7.3.1",
     "vue-loading-spinner": "^1.0.10",
     "vue-smooth-scroll": "^1.0.13",
     "vuetify": "^0.15.7",
