--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "christopheschwyzer <kingchiller@gmail.com>",
   "private": true,
   "dependencies": {
+    "firebase": "^4.5.0",
     "gsap": "^1.20.2",
     "i18next": "^8.4.3",
     "jquery": "^3.2.1",
