--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "uploadcare-widget": "^3.1.3",
     "vue-i18n": "^7.3.1",
     "vue-loading-spinner": "^1.0.10",
+    "vue-scroll-reveal": "^1.0.3",
     "vue-smooth-scroll": "^1.0.13",
     "vuetify": "^0.15.7",
     "webfontloader": "^1.6.28"
