--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.5.0",
+    "firebaseui": "^2.4.0",
     "gsap": "^1.20.2",
     "i18next": "^8.4.3",
     "jquery": "^3.2.1",
