--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-scroll-reveal": "^1.0.3",
     "vue-smooth-scroll": "^1.0.13",
     "vuetify": "^0.16.9",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "js-beautify": "1.6.14"
   },
   "scripts": {
     "dev": "nuxt",
