--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "node.extend": "^2.0.0",
     "nuxt": "^1.0.0-rc11",
     "underscore": "^1.8.3",
-    "uploadcare-widget": "^3.1.4",
+    "uploadcare-widget": "^3.2.0",
     "vue-i18n": "^7.3.2",
     "vue-loading-spinner": "^1.0.10",
     "vue-scroll-reveal": "^1.0.3",
     "vuetify": "^0.16.9",
-    "webfontloader": "^1.6.28",
-    "js-beautify": "1.6.14"
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "dev": "nuxt",
@@ -37,7 +36,7 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^2.0.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.6.0",
     "sass-loader": "^6.0.6",
     "scss-loader": "0.0.1",
     "stylus": "^0.54.5",
